src/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: last-bite-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:737460622117:certificate/9573a20d-67c3-49c0-87ac-695ccc78d413
spec:
  rules:
  - host: www.nodezzang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: last-bite-service
            port:
              number: 80
  - host: grafana.nodezzang.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
